fmt, lint, tests, swagger
